maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:4: error: type mismatch;
 found   : (Int, Int)
 required: Int
  ecrire(x,y,0)
         ^JediEscaper:4: error: type mismatch;
 found   : (Int, Int)
 required: Int
  ecrire(x,y,0)
           ^JediEscaper:37: error: type mismatch;
 found   : Unit
 required: (Int, Int)
  for (i<- 0 to getMondeLargeur() -1) {
        ^